--- a/app/src/main/res/layout/activity_custom_bluetooth.xml
+++ b/app/src/main/res/layout/activity_custom_bluetooth.xml
@@ -19,12 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/scan_result"
-        android:padding="15dp"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
